# crypto

./: CMakeLists.txt  Cargo.toml  go.mod  main.c  main.go  seed.data  seed.ods  vcpkg.json
app/: CMakeLists.txt  burro.c
cmd/: root.go
cmd/rot/: kgen.go  rot.go
include/: cphr.h  fit.h  ga.h  rot.h  uc.h
rot/: rot.go
src/: alph.rs  burro.c  codec.rs  cphr.c  crk.c  crk.h  enc.c  enc.h  fit.c  ga.c  key.c  key.h  key.rs  lib.rs  main.rs  rot.c  u8.c  u8.h  uc.c  utf8.rs
subm/: ru.key  text.in  text.out
